- Remove optional instants at creation - Harmonize states and cnecs ids - Refer to instant/contingency in json instead of state - Remove implicit management of optional contingencies for preventive state